# lib/db/src/schema/index.ts
@@ -9,3 +9,4 @@ export * from "./reviews";
 export * from "./saved-places";
 export * from "./subscriptions";
 export * from "./search-logs";
+export * from "./partners";
